SERVER-13410 metadata changes in dblock